--- a/env.example
+++ b/env.example
@@ -2,5 +2,6 @@ MONGO_HOST=your_db_host_name
 MONGO_USER=your_db_username
 MONGO_PASSWORD=your_db_password
 MONGO_DBNAME=your_db_name
-FLASK_ENV=development #either development or production
-SECRET_KEY=foo #pick any secret key word you like for debugging sessions
+FLASK_APP=app.py # the main script file
+FLASK_ENV=development # either development or production
+SECRET_KEY=foo # pick any secret key word you like for debugging sessions
