--- a/env.example
+++ b/env.example
@@ -4,4 +4,5 @@ MONGO_PASSWORD=your_db_password
 MONGO_DBNAME=your_db_name
 FLASK_APP=app.py # the main script file
 FLASK_ENV=development # either development or production
-SECRET_KEY=foo # pick any secret key word you like for debugging sessions
+GITHUB_SECRET=foo # pick any secret key word you like for GitHub webooks
+GITHUB_REPO=https://github.com/nyu-database-design/flask-mongodb-example.git # the GitHub repository
