--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/foobarstein/Documents/courses/database-design/flask-mongodb-example/venv/bin/python3"
+    "python.pythonPath": "/usr/bin/python3"
 }
