--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ Flask-DebugToolbar==0.11.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+pymongo==3.11.3
 python-dotenv==0.16.0
 Werkzeug==1.0.1
