--- a/env.example
+++ b/env.example
@@ -1,8 +1,8 @@
-MONGO_HOST=your_db_host_name
+MONGO_HOST=your_db_host_server_name
 MONGO_USER=your_db_username
 MONGO_PASSWORD=your_db_password
 MONGO_DBNAME=your_db_name
-FLASK_APP=app.py # the main script file
-FLASK_ENV=development # either development or production
-GITHUB_SECRET=foo # pick any secret key word you like for GitHub webooks
-GITHUB_REPO=https://github.com/nyu-database-design/flask-mongodb-web-app.git # the GitHub repository
+FLASK_APP=app.py
+FLASK_ENV=development
+GITHUB_SECRET=your_github_secret
+GITHUB_REPO=https://github.com/your-repository-url
