fixed .env mess

--- a/env.example
+++ b/env.example
@@ -2,7 +2,7 @@ MONGO_HOST=your_db_host_server_name
 MONGO_USER=your_db_username
 MONGO_PASSWORD=your_db_password
 MONGO_DBNAME=your_db_name
-MONGO_AUTHSOURCE=admin # if using MongoDB within a Docker container, set this to 'admin', otherwise, set it to the name of the database you are using
+MONGO_AUTHSOURCE=admin # if using MongoDB within a Docker container, set this to 'admin', for NYU CIMS department's MongoDB server, set it to the name of the database you are using
 FLASK_APP=app.py
 FLASK_ENV=development
 GITHUB_SECRET=your_github_secret
