--- a/env.example
+++ b/env.example
@@ -1,9 +1,7 @@
-MONGO_HOST=your_db_host_server_name
-MONGO_USER=your_db_username
-MONGO_PASSWORD=your_db_password
 MONGO_DBNAME=your_db_name
-MONGO_AUTHSOURCE=admin # if using MongoDB within a Docker container, set this to 'admin', for NYU CIMS department's MongoDB server, set it to the name of the database you are using
+MONGO_URI=mongodb://your_db_username:your_db_password@your_db_host_server_name:your_db_port_number/your_db_name?authSource=your_db_name&retryWrites=true&w=majority
 FLASK_APP=app.py
 FLASK_ENV=development
-GITHUB_SECRET=your_github_secret
-GITHUB_REPO=https://github.com/your-repository-url
+FLASK_PORT=5000
+GITHUB_REPO=https://github.com/your-repository-url # unnecessary for basic operations
+GITHUB_SECRET=your_github_secret # unnecessary for basic operations
