--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+-i https://pypi.org/simple
 blinker==1.4
 click==7.1.2
-Flask==1.1.2
-Flask-DebugToolbar==0.11.0
+flask==1.1.2
+flask-debugtoolbar==0.11.0
 itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
+jinja2==2.11.3
+markupsafe==1.1.1
 pymongo==3.11.3
 python-dotenv==0.16.0
-Werkzeug==1.0.1
+werkzeug==1.0.1
