--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ markupsafe = "==1.1.1"
 pymongo = "==3.11.3"
 python-dotenv = "==0.16.0"
 werkzeug = "==1.0.1"
+sentry-sdk = {extras = ["flask"], version = "*"}
 
 [dev-packages]
 
