--- a/env.example
+++ b/env.example
@@ -1,5 +1,6 @@
 MONGO_DBNAME=your_db_name
 MONGO_URI=mongodb://your_db_username:your_db_password@your_db_host_server_name:your_db_port_number/your_db_name?authSource=your_db_name&retryWrites=true&w=majority
+SENTRY_DSN=your_sentry_dsn # get by registering at https://sentrio.io and configuring new flask project there
 FLASK_APP=app.py
 FLASK_ENV=development
 GITHUB_REPO=https://github.com/your-repository-url # unnecessary for basic operations
