--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 -i https://pypi.org/simple
 blinker==1.4
+certifi==2023.11.17 ; python_version >= '3.6'
 click==7.1.2
 flask==1.1.2
 flask-debugtoolbar==0.11.0
@@ -8,4 +9,6 @@ jinja2==2.11.3
 markupsafe==1.1.1
 pymongo==3.11.3
 python-dotenv==0.16.0
+sentry-sdk[flask]==1.38.0
+urllib3==2.1.0 ; python_version >= '3.6'
 werkzeug==1.0.1
