--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ jinja2==2.11.3
 markupsafe==1.1.1
 pymongo==3.11.3
 python-dotenv==0.16.0
-sentry-sdk[flask]==1.38.0
-urllib3==2.1.0 ; python_version >= '3.6'
+sentry-sdk[flask]==1.9.0
+urllib3==1.26.6
 werkzeug==1.0.1
